---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : 1 .. 0"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 9..15: element range is too small
| note in file FileId(1) for 9..15: computed range size is 0
| error in file FileId(1) for 9..15: zero sized ranges cannot be used in `type` declarations
